Fix position indicator in leaderboard not visible when row background is set

--- a/css/event.css
+++ b/css/event.css
@@ -1998,7 +1998,6 @@ td .tooltip {
   background: #4195c8;
   top: 0;
   left: 0;
-  z-index: -1;
   width: 0;
 }
 
